--- a/html-templates/css/styles.css
+++ b/html-templates/css/styles.css
@@ -122,13 +122,15 @@
    ========================================================================== */
 .screen-home {
   border-color: black;
-  transform: translate(0, 100%);
 }
 .screen-order {
   border-color: blue;
-  transform: translate(0, -100%);
+}
+.screen-lock {
+  border-color: red;
 }
 .screen {
+  display: none;
   position: fixed;
   z-index: 30;
   top: 0;
@@ -138,10 +140,9 @@
   border-style: dashed;
   border-width: 4px;
   -webkit-user-select: none;
-  transition: transform .3s;
 }
 .screen.shown {
-  transform: translate(0, 0);
+  display: block;
 }
 .screen BUTTON {
   padding: 0;
@@ -153,6 +154,9 @@
 }
 .screen BUTTON:hover {
   background-color: #fff;
+}
+.screen BUTTON:active {
+  color: #f00;
 }
 .screen .enabled {
   cursor: pointer;
@@ -166,6 +170,11 @@
 .screen .label {
   position: absolute;
   font-size: 24px;
+}
+.screen .btn {
+  padding: 4px 5px;
+  border: 1px solid #333;
+  border-radius: 10px;
 }
 .screen .navigate-left {
   top: 50%;
