adds fake JS and status messages

--- a/html-templates/src/less/styles.less
+++ b/html-templates/src/less/styles.less
@@ -14,3 +14,4 @@
 @import "remote.less";    // Remote control
 @import "slides.less";    // Slides
 @import "controls.less";  // On-screen controls
+@import "messages.less";  // Status messages
