--- a/html-templates/css/styles.css
+++ b/html-templates/css/styles.css
@@ -171,7 +171,7 @@
   position: absolute;
   font-size: 24px;
 }
-.screen .btn {
+.screen .btn .label {
   padding: 4px 5px;
   border: 1px solid #333;
   border-radius: 10px;
@@ -211,4 +211,22 @@
 }
 .screen .navigate-down .label {
   bottom: 60px;
+}
+/* ==========================================================================
+   Roku photos
+   Status messages
+   ========================================================================== */
+.messages {
+  position: absolute;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 32px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 0px 5px #969696;
+}
+.message {
+  display: none;
 }
