--- a/html-templates/src/less/controls.less
+++ b/html-templates/src/less/controls.less
@@ -64,7 +64,7 @@
 		position: absolute;
 		font-size: 24px;
 	}
-	.btn {
+	.btn .label {
 		padding: 4px 5px;
 		border: 1px solid #333;
 		border-radius: 10px;
