--- a/html-templates/src/less/remote.less
+++ b/html-templates/src/less/remote.less
@@ -40,6 +40,7 @@
 	.navigate-up,
 	.navigate-down {
 		background: purple;
+		font-size: 18px;
 	}
 	.navigate-left {
 		top: 100px;
@@ -72,6 +73,7 @@
 		margin-left: -50px / 2;
 		background-color: purple;
 		border-radius: 50px;
+		font-size: 15px;
 	}
 	.play-pause,
 	.rewind,
