--- a/html-templates/src/less/styles.less
+++ b/html-templates/src/less/styles.less
@@ -5,6 +5,7 @@
 // 3rd-party libraries
 // --------------------------------------------------
 
+@import (less) "../../css/font-awesome.css";    // Font Awesome 4.6.3
 
 // Additional styles below:
 // --------------------------------------------------
