--- a/html-templates/src/less/controls.less
+++ b/html-templates/src/less/controls.less
@@ -43,7 +43,8 @@
 		&:hover {
 			background-color: #fff;
 		}
-		&:active {
+		&:active,
+		&.active {
 			color: #f00;
 			// border-color: #f00;
 		}
@@ -105,5 +106,18 @@
 			margin: 10px 0;
 		}
 	}
+	.navigate-back {
+		top: 10px;
+		left: 10px;
+		.label {
+			margin: 0 10px;
+		}
+	}
 }
-
+.screen-title {
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	font-family: sans-serif;
+	color: #666;
+}
