--- a/html-templates/src/less/messages.less
+++ b/html-templates/src/less/messages.less
@@ -6,7 +6,8 @@
 .messages {
 	position: absolute;
 	top: 25%;
-	width: 100%;
+	left: 0;
+	right: 0;
 	text-align: center;
 	font-family: sans-serif;
 	font-size: 32px;
