--- a/html-templates/src/less/styles.less
+++ b/html-templates/src/less/styles.less
@@ -6,6 +6,7 @@
 // --------------------------------------------------
 
 @import (less) "../../css/font-awesome.css";    // Font Awesome 4.6.3
+@import (less) "../../css/animate.css";         // animate.css
 
 // Additional styles below:
 // --------------------------------------------------
