--- a/html-templates/src/less/controls.less
+++ b/html-templates/src/less/controls.less
@@ -1,6 +1,6 @@
 /* ==========================================================================
    Roku photos
-   On-screen controls
+   Screen; On-screen controls
    ========================================================================== */
 
 // Controls
