--- a/html-templates/src/less/messages.less
+++ b/html-templates/src/less/messages.less
@@ -18,3 +18,23 @@
 .message {
 	display: none;
 }
+.pause-icon,
+.play-icon {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -50px;
+	margin-left: -30px;
+}
+.pause-icon {
+	font-size: 72px;
+	-webkit-animation-duration: .4s;
+	-moz-animation-duration: .4s;
+	animation-duration: .4s;
+}
+.play-icon {
+	font-size: 72px;
+	-webkit-animation-duration: .8s;
+	-moz-animation-duration: .8s;
+	animation-duration: .8s;
+}
