--- a/html-templates/src/less/slides.less
+++ b/html-templates/src/less/slides.less
@@ -19,9 +19,9 @@
 	}
 	.label {
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
+		bottom: 10px;
+		left: 10px;
+		font-family: sans-serif;
 	}
 }
 .slide1 {
@@ -31,3 +31,20 @@
 	background-color: red;
 }
 
+// Caption
+// --------------------------------------------------
+.caption {
+	display: none;
+	position: absolute;
+	z-index: 10;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding: 10px;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #fff;
+	font-size: 16px;
+	font-family: sans-serif;
+	text-align: center;
+	
+}
