--- a/html-templates/src/less/slides.less
+++ b/html-templates/src/less/slides.less
@@ -7,11 +7,11 @@
 // --------------------------------------------------
 .slide {
 	display: none;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	position: absolute;
+	top: 30px;
+	left: 30px;
+	right: 30px;
+	bottom: 30px;
 	border: 1px solid red;
 	text-align: center;
 	&.active {
@@ -21,7 +21,7 @@
 		position: absolute;
 		bottom: 10px;
 		left: 10px;
-		font-family: sans-serif;
+		font-family: monospace;
 	}
 }
 .slide1 {
@@ -36,15 +36,26 @@
 .caption {
 	display: none;
 	position: absolute;
-	z-index: 10;
+	z-index: 40;
 	bottom: 0;
 	left: 0;
 	right: 0;
-	padding: 10px;
-	background-color: rgba(0, 0, 0, 0.5);
+	padding: 20px;
+	background-color: rgba(0, 0, 0, 0.7);
 	color: #fff;
 	font-size: 16px;
 	font-family: sans-serif;
-	text-align: center;
-	
+	text-align: left;
+	text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
+	.path {
+		position: absolute;
+		top: 15px;
+		left: 20px;
+		right: 0;
+		font-size: 13px;
+		font-family: monospace;
+	}
+	.tags {
+		// text-align: center;
+	}
 }
