--- a/html-templates/src/less/controls.less
+++ b/html-templates/src/less/controls.less
@@ -86,9 +86,9 @@ BODY {
 		font-size: 24px;
 	}
 	.btn .label {
-		padding: 4px 5px;
-		border: 1px solid #333;
-		border-radius: 10px;
+		// padding: 4px 5px;
+		// border: 1px solid #333;
+		// border-radius: 10px;
 	}
 	.navigate-left {
 		top: 50%;
