--- a/html-templates/src/less/slides.less
+++ b/html-templates/src/less/slides.less
@@ -14,6 +14,7 @@
 	bottom: 30px;
 	border: 1px solid red;
 	text-align: center;
+	overflow: hidden;
 	&.active {
 		display: block;
 	}
@@ -23,6 +24,16 @@
 		left: 10px;
 		font-family: monospace;
 	}
+}
+.image {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-position: 50% 50%;
+	background-size: 100% auto;
+	background-repeat: no-repeat;
 }
 .slide1 {
 	background-color: yellow;
