--- a/html-templates/src/less/slides.less
+++ b/html-templates/src/less/slides.less
@@ -12,18 +12,18 @@
 	left: 30px;
 	right: 30px;
 	bottom: 30px;
-	border: 1px solid red;
+	border: 1px solid #fff;
 	text-align: center;
 	overflow: hidden;
 	&.active {
 		display: block;
 	}
-	.label {
-		position: absolute;
-		bottom: 10px;
-		left: 10px;
-		font-family: monospace;
-	}
+	// .label {
+	// 	position: absolute;
+	// 	bottom: 10px;
+	// 	left: 10px;
+	// 	font-family: monospace;
+	// }
 }
 .image {
 	position: absolute;
