--- a/html-templates/src/less/controls.less
+++ b/html-templates/src/less/controls.less
@@ -18,8 +18,28 @@ BODY {
 	bottom: 40px;
 	border-radius: 30px;
 	background-color: #000;
-}
+	&:after {
+		content: '';
+		position: fixed;
+		bottom: 0;
+		left: 35%;
+		right: 35%;
+		display: block;
+		height: 10px;
+		background-color: #555;
+	}
+	&:before {
+		content: '';
+		position: fixed;
+		bottom: 0;
+		left: 40%;
+		right: 40%;
+		display: block;
+		height: 40px;
+		background-color: #666;
+	}
 
+}
 
 // Screen; Controls
 // --------------------------------------------------
