--- a/html-templates/src/less/controls.less
+++ b/html-templates/src/less/controls.less
@@ -78,8 +78,12 @@ BODY {
 		border: 0;
 		// opacity: 0.05;
 		background: transparent;
+		font-weight: bold;
+		color: #fff;
+		text-shadow: 0px 0px 5px rgba(150, 150, 150, 1);
+		// background-color: rgba(0, 0, 0, 0.2);
 		&:hover {
-			background-color: #fff;
+			background-color: rgba(0, 0, 0, 0.5)
 		}
 		&:active,
 		&.active {
@@ -132,7 +136,7 @@ BODY {
 		transform: translate(-50%, 0);
 		.label {
 			display: block;
-			margin: 10px 0;
+			// margin: 10px 0;
 		}
 	}
 	.navigate-down {
@@ -141,7 +145,7 @@ BODY {
 		transform: translate(-50%, 0);
 		.label {
 			display: block;
-			margin: 10px 0;
+			// margin: 10px 0;
 		}
 	}
 	.navigate-back {
