--- a/html-templates/src/less/slides.less
+++ b/html-templates/src/less/slides.less
@@ -62,7 +62,14 @@
 		position: absolute;
 		top: 15px;
 		left: 20px;
-		right: 0;
+		// right: 0;
+		font-size: 13px;
+		font-family: monospace;
+	}
+	.date {
+		position: absolute;
+		top: 15px;
+		right: 20px;
 		font-size: 13px;
 		font-family: monospace;
 	}
