--- a/html-templates/src/less/remote.less
+++ b/html-templates/src/less/remote.less
@@ -13,13 +13,14 @@
 .remote {
 	position: fixed;
 	z-index: 50;
-	right: 200px;
-	bottom: -50px;
+	right: 240px;
+	bottom: -70px;
 	height: 70%;
 	width: 200px;
 	background-color: #222;
 	border-radius: 50px;
 	border: 3px solid #000;
+	box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.35);
 }
 .remote .controls {
 	BUTTON {
