--- a/html-templates/css/styles.css
+++ b/html-templates/css/styles.css
@@ -3542,17 +3542,21 @@
   animation-name: fadeInUpBig;
 }
 @-webkit-keyframes fadeOut {
+  10%,
   50% {
     opacity: 1;
   }
+  from,
   to {
     opacity: 0;
   }
 }
 @keyframes fadeOut {
+  10%,
   50% {
     opacity: 1;
   }
+  from,
   to {
     opacity: 0;
   }
@@ -5333,13 +5337,15 @@ BODY {
 }
 .screen BUTTON {
   position: absolute;
-  display: inline-block;
+  display: block;
   padding: 10px;
   border: 0;
   background: transparent;
   font-weight: bold;
   color: #fff;
   text-shadow: 0px 0px 5px #969696;
+  transition: transform .3s, opacity .3s;
+  text-align: center;
 }
 .screen BUTTON:hover {
   background-color: rgba(0, 0, 0, 0.5);
@@ -5360,13 +5366,18 @@ BODY {
 .screen .active {
   border-color: #fff;
 }
+.screen .activated {
+  transform: scale(2, 2);
+  opacity: 0;
+}
 .screen .label {
   font-size: 24px;
 }
 .screen .navigate-left {
   top: 50%;
   left: 0;
-  transform: translate(0, -50%);
+  height: 60px;
+  margin-top: -30px;
 }
 .screen .navigate-left .label {
   margin: 0 10px;
@@ -5382,7 +5393,8 @@ BODY {
 .screen .navigate-up {
   top: 0;
   left: 50%;
-  transform: translate(-50%, 0);
+  width: 240px;
+  margin-left: -120px;
 }
 .screen .navigate-up .label {
   display: block;
@@ -5390,7 +5402,8 @@ BODY {
 .screen .navigate-down {
   bottom: 0;
   left: 50%;
-  transform: translate(-50%, 0);
+  width: 240px;
+  margin-left: -120px;
 }
 .screen .navigate-down .label {
   display: block;
