--- a/html-templates/src/less/controls.less
+++ b/html-templates/src/less/controls.less
@@ -73,7 +73,7 @@ BODY {
 	}
 	BUTTON {
 		position: absolute;
-		display: inline-block;
+		display: block;
 		padding: 10px;
 		border: 0;
 		// opacity: 0.05;
@@ -82,6 +82,9 @@ BODY {
 		color: #fff;
 		text-shadow: 0px 0px 5px rgba(150, 150, 150, 1);
 		// background-color: rgba(0, 0, 0, 0.2);
+		transition: transform .3s, opacity .3s;
+		text-align: center;
+		// border: 1px solid red;
 		&:hover {
 			background-color: rgba(0, 0, 0, 0.5)
 		}
@@ -105,6 +108,10 @@ BODY {
 		// opacity: 1;
 		border-color: #fff;
 	}
+	.activated {
+		transform: scale(2,2);
+		opacity: 0;
+	}
 	.label {
 		// position: absolute;
 		font-size: 24px;
@@ -117,7 +124,8 @@ BODY {
 	.navigate-left {
 		top: 50%;
 		left: 0;
-		transform: translate(0, -50%);
+		height: 60px;
+		margin-top: -60px/2;
 		.label {
 			margin: 0 10px;
 		}
@@ -133,7 +141,9 @@ BODY {
 	.navigate-up {
 		top: 0;
 		left: 50%;
-		transform: translate(-50%, 0);
+		width: 240px;
+		margin-left: -240px/2;
+		// transform: translate(-50%, 0);
 		.label {
 			display: block;
 			// margin: 10px 0;
@@ -142,7 +152,9 @@ BODY {
 	.navigate-down {
 		bottom: 0;
 		left: 50%;
-		transform: translate(-50%, 0);
+		width: 240px;
+		margin-left: -240px/2;
+		// transform: translate(-50%, 0);
 		.label {
 			display: block;
 			// margin: 10px 0;
